# empathy-clone

./: .gitignore  HACKING  Makefile.am  NEWS  PASTEBIN-API-KEY.txt  autogen.sh  configure.ac  release.py
data/: .gitignore  Empathy.Call.client  Makefile.am  org.gnome.Empathy.gschema.xml.in
goa-mc-plugin/: mcp-account-manager-goa.c
help/: .gitignore  Makefile.am
libempathy/: Makefile.am  (+23 more)
libempathy-gtk/: Makefile.am  empathy-account-widget-generic.ui  empathy-account-widget-irc.ui  empathy-account-widget-jabber.ui  empathy-account-widget-local-xmpp.ui  empathy-account-widget-sip.c  empathy-account-widget-sip.ui  empathy-account-widget.c  empathy-account-widget.h  empathy-base-password-dialog.c  empathy-calendar-button.c  empathy-calendar-button.h  empathy-call-utils.c  empathy-call-utils.h  empathy-chat-text-view.c  empathy-chat-text-view.h  empathy-chat-view.c  empathy-chat-view.h  empathy-chat.c  empathy-chat.h  empathy-contact-blocking-dialog.c  empathy-contact-blocking-dialog.ui  empathy-contact-chooser.c  empathy-contact-dialogs.c  empathy-contact-dialogs.h  empathy-contact-dialogs.ui  empathy-contact-search-dialog.c  empathy-contact-widget.c  empathy-contact-widget.h  empathy-contact-widget.ui  empathy-contactinfo-utils.c  empathy-contactinfo-utils.h  empathy-groups-widget.c  empathy-individual-menu.c  empathy-individual-menu.h  empathy-individual-store-manager.c  empathy-individual-store.c  empathy-individual-view.c  empathy-individual-widget.c  empathy-irc-network-chooser.c  (+13 more)
tests/interactive/: .gitignore  Makefile.am  test-empathy-calendar-button.c
(+126 files in other folders)
